syntax = "proto3";

message ExampleSchema {
  string name = 1;
  int32 age = 2;
  bool items = 3;
}
